# megamonic

./: Cargo.toml  LICENSE  README.md  build.rs
src/: custom_panic.rs  main.rs  system.rs  terminal.rs  ui.rs
src/system/: cpu.rs  events.rs  gpu.rs  hostinfo.rs  loadavg.rs  memory.rs  network.rs  processes.rs  sensors.rs  swap.rs  time.rs  uring.rs
src/system/events/: epoll.rs
src/system/gpu/: nvidia.rs
src/system/processes/: process.rs
src/ui/: gpu.rs  hostinfo.rs  loadavg.rs  memory.rs  network.rs  overview.rs  processes.rs  sensors.rs  swap.rs  time.rs
