[package]
name = "megamonic"
version = "0.1.0"
authors = ["meganomic"]
edition = "2021"
build = "build.rs"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[dependencies]
libc-strftime = "0.2"
sensors = "0.2"
clap = "2"
nvml-wrapper = "0.8"
anyhow = "1"
btoi = "0.4"
ahash = "0.8"
thiserror = "1"
