[package]
name = "megamonic"
version = "1.0.0"
authors = ["meganomic"]
edition = "2021"
build = "build.rs"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[dependencies]
libc-strftime = "0.2"
sensors = "0.2"
clap = { version = "4", features = ["wrap_help"] }
nvml-wrapper = "0.11.0"
anyhow = "1"
btoi = "0.5"
ahash = "0.8"
thiserror = "2"
